@@ -34,10 +34,16 @@
 <div id="p4a_popup">
 	<div id="p4a_main_container">
 		<div id="p4a_main_inner_container" style='width:<?php echo $this->_tpl_vars['main']->getWidth() ?>'>
-			<h2>
-				<a style="float:right" href="#" <?php echo $this->close_popup_button->composeStringActions() ?> id="p4a_popup_close_handler"><img src="<?php echo P4A_ICONS_PATH ?>/32/actions/window-close.png" /></a>
-				<?php echo P4A_Generate_Widget_Layout_Table($_icon, $_title) ?>
-			</h2>
+			<div id="p4a_popup_top_container">
+				<h2>
+					<a style="float:right" href="#" <?php echo $this->close_popup_button->composeStringActions() ?> id="p4a_popup_close_handler"><img src="<?php echo P4A_ICONS_PATH ?>/32/actions/window-close.png" /></a>
+					<?php echo P4A_Generate_Widget_Layout_Table($_icon, $_title) ?>
+				</h2>
+				
+				<?php if (isset($top)): ?>
+					<?php echo $top?>
+				<?php endif; ?>
+			</div>
 		
 			<?php if (isset($main)) echo $main ?>
 		</div>
